--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,3 +20,16 @@ body{
     height: 1;
     overflow: hidden;
 }
+
+#tracer{
+    margin-top: -400;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1;
+    height: 1s;
+    color: white;
+    background-color:white;
+    position: absolute;
+    z-index: 2;
+}
