--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,3 +33,17 @@ body{
     position: absolute;
     z-index: 2;
 }
+
+.controls{
+    cursor: pointer;
+    position: fixed;
+    top: 90%;
+    left: 92%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100px;
+}
+
