--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -37,13 +37,14 @@ body{
 .controls{
     cursor: pointer;
     position: fixed;
-    top: 80%;
-    left: 50%;
+    top: 5%;
+    left: 5%;
     width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     width:100px;
+    height: 100px;
 }
 
