--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,9 @@
 *{
     box-sizing: border-box;
     width: 100%;
+    padding: 0;
+    margin: 0;
+    user-select: none;
 }
 
 
@@ -8,6 +11,8 @@ body{
     display:flex;
     align-items:center;
     justify-content:center;
+    width: 0px;
+    height: 0px;
 }
 
 #canvas{
