--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -52,4 +52,80 @@ body{
     width:100px;
     height: 100px;
 }
+/* +35 */
+.card{
+   
+    position: absolute;
+    background: rgba(255, 255, 255, 0.15);
+    font-size: 30px;
+    display: none;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0.2%;
+    border:1px white solid;
+}
+.card-content-wrapp{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 1%;
+    gap: 1%;
+    
+}
+.card-img-holder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex: 1;
+}
+.card-img{
+    width: 100%;
+}
+.card-text-holder{
+    flex: 1;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    scrollbar-width: none;
+    border-left: 1px white solid;
+}
+
+a{
+    text-align: end;
+    text-decoration: none;
+    font-size: 40px;
+    color: none;
+    text-transform: capitalize;
+}
+.BaseA{
+    color: rgb(231, 178, 223);
+
+}
+.BaseA a{
+    color: pink;
+
+}
+
+/*  base B */
+.BaseB{
+    color: orange;
+}
+
+
+
+/*  base B */
+.BaseC{
+    color:lightskyblue
+
+}
 
